Give --blas and --gpu pages of their own, out of the SIMD guide
The page titled "Vector Kernels and SIMD Acceleration" had grown two more flags
inside it: --blas (50 lines) and --gpu (127), which are not SIMD, do not reach
the WASM backends at all, and each carry their own install story, their own
decline table and their own precision contract. At 414 lines the title named
half of what the page was.

Split rather than retitled, because the vec/--simd half is one topic already --
the vec package and the flag that accelerates it -- and because the file name is
load-bearing: 49 inbound links point at simd-acceleration.md#accelerating-linalg
from the linalg reference pages, and a rename would have churned every one of
them for nothing. The 5 links that named the GPU section's anchor now point at
gpu-acceleration.md instead.

- doc/{en,ja}/guides/blas-acceleration.md -- the --blas section plus the
  blas-matmul.lisp example, which is the one example a linalg: flag reaches.
- doc/{en,ja}/guides/gpu-acceleration.md -- the --gpu section, keeping "How the
  three flags compose" and the six measurement tables with it.
- The SIMD guide keeps vec, --simd and the vec: examples, and gains a "Beyond
  --simd" section pointing at the other two.

Each new page opens by placing itself among the three flags, since it is now
read on its own. .kb/linalg-blas.md and .kb/gpu.md point at the new files, and
todo-471's doc step names the page it now has to edit.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>